# soml

./: .gitignore  .gitmodules  Cargo.toml  LICENCE-MIT  README.md  build.rs
.github/workflows/: ci.yml  nightly.yml
binsize/: crates.toml  main.py
binsize/tests/: __init__.py  common.py  de_only.py  reference.py  ser_de.py
binsize/utils/: __init__.py  crates.py  markdown.py  paths.py
scripts/: crates.json  requirements.txt  size-test.py
src/: lib.rs  map.rs
src/de/: error.rs  mod.rs  parser.rs  reader.rs
src/ser/: _impl.rs  error.rs  mod.rs  tree.rs  utils.rs  value.rs  writer.rs
src/value/: de.rs  mod.rs  ser.rs
src/value/datetime/: de.rs  mod.rs  ser.rs
tests/: template-de-valid  template-invalid  template-ser  toml_test.rs
tests/utils/: mod.rs
