[package]
name = "soml"
version = "0.1.0"
authors = ["Lucas Jansen"]
edition = "2021"
rust-version = "1.80.0" # TODO MSRV
description = "A lightweight Serde-compatible TOML parser"
repository = "https://github.com/staticintlucas/soml"
license = "MIT OR Apache-2.0"
keywords = ["serde", "toml", "parsing", "deserializing"]
categories = ["config", "parser-implementations", "parsing"]

[features]
default = ["std", "datetime"]
std = []
alloc = [] # TODO
datetime = [] # TODO
fast = []

[dependencies]
lexical = { version = "7.0", features = ["format", "power-of-two"] }
serde = "1.0"

[dev-dependencies]
assert_matches = "1.5"
isclose = "0.1"
chrono = { version = "0.4", default-features = false }
indoc = "2.0"
maplit = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"

[lints.rust]
future-incompatible = "warn"
let-underscore = "warn"
nonstandard-style = "warn"
unused = "warn"

missing-copy-implementations = "warn"
missing-debug-implementations = "warn"
# missing-docs = "warn" # TODO
non-ascii-idents = "warn"
single-use-lifetimes = "warn"
trivial-casts = "warn"
trivial-numeric-casts = "warn"
unit-bindings = "warn"
unstable-features = "warn"
# unused-crate-dependencies = "warn" # TODO rust-lang/rust#95513
unused-lifetimes = "warn"
unused-qualifications = "warn"
variant-size-differences = "warn"
unsafe-code = { level = "forbid", priority = 1 }
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(coverage)"] } # taiki-e/cargo-llvm-cov#123

[lints.clippy]
all = "warn"
cargo = "warn"
nursery = "warn"
pedantic = "warn"

allow_attributes_without_reason = "warn"
dbg_macro = "warn"
expect_used = "warn"
panic = "warn"
pattern_type_mismatch = "warn"
redundant_type_annotations = "warn"
try_err = "warn"
unseparated_literal_suffix = "warn"
unwrap_used = "warn"

missing_const_for_fn = { level = "allow", priority = 1 } # TODO decide on constness of public API
