[package]
name = "soml"
version = "0.1.0"
authors = ["Lucas Jansen"]
edition = "2021"
rust-version = "1.65.0"
description = "A lightweight Serde-compatible TOML parser"
repository = "https://github.com/staticintlucas/soml"
license = "MIT OR Apache-2.0"
keywords = ["serde", "toml", "parsing", "deserializing"]
categories = ["config", "parser-implementations", "parsing"]

[features]
default = ["std", "datetime", "strict"]
std = []
# alloc = [] # TODO
datetime = []
strict = []

[dependencies]
ryu = "1.0"
serde = "1.0"
serde_bytes = "0.11"

[dev-dependencies]
assert_matches = "1.5"
chrono = { version = "0.4", default-features = false }
indoc = "2.0"
maplit = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_test = "1.0"

[lints.rust]
deprecated_safe = "warn"
future_incompatible = "warn"
keyword_idents = "warn"
let_underscore = "warn"
nonstandard_style = "warn"
refining_impl_trait = "warn"
rust_2024_compatibility = "warn"
unused = "warn"

ambiguous_negative_literals = "warn"
closure_returning_async_block = "warn"
deref_into_dyn_supertrait = "warn"
linker_messages = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
non_ascii_idents = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
single_use_lifetimes = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(coverage)"] } # taiki-e/cargo-llvm-cov#123
unit_bindings = "warn"
unstable_features = "warn"
# unused_crate_dependencies = "warn" # TODO rust-lang/rust#95513
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
# unused_results = "warn" # TODO?
variant_size_differences = "warn"

unsafe_code = { level = "forbid", priority = 1 }

[lints.clippy]
all = "warn" # complexity, correctness, perf, style, suspicious
cargo = "warn"
nursery = "warn"
pedantic = "warn"

# cfg_not_test = "warn" # TODO when we have better map ordering support
dbg_macro = "warn"
else_if_without_else = "warn"
expect_used = "warn"
if_then_some_else_none = "warn"
missing_inline_in_public_items = "warn"
module_name_repetitions = "warn"
panic = "warn"
pattern_type_mismatch = "warn"
redundant_type_annotations = "warn"
semicolon_outside_block = "warn"
try_err = "warn"
unseparated_literal_suffix = "warn"
unused_trait_names = "warn"
unwrap_used = "warn"

missing_const_for_fn = { level = "allow", priority = 1 } # TODO decide on constness of public API
